# LTP-project

./: .gitignore  pyproject.toml  submit-job.sh
data/: df_main.pkl  test.csv  train.csv
ltp/: __main__.py  prompt.py
notebooks/: Copy_of_Evidence.ipynb  Few_shot_learning_with_T5.ipynb  Openprompt_1.ipynb  Openprompt_softprompt.ipynb  ensemble_prompts.ipynb  ensemble_prompts_cmv.ipynb  evidence.ipynb  evidencePE.ipynb  exploratory.ipynb  gpt-3.ipynb  preprocessing.ipynb  preprocessing_cmv.ipynb  probe.ipynb  prompt_based_gpt_example.ipynb  test.csv  train.csv
scripts/: find_token_id.py
