[tool.poetry]
name = "ltp-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
matplotlib = "^3.5.2"
jupyter = "^1.0.0"
datasets = "^2.1.0"
sklearn = "^0.0"
pandas = "^1.4.2"
spacy = "^3.3.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
